--- a/structure-models.html
+++ b/structure-models.html
@@ -145,7 +145,7 @@
             margin: 0 auto;
             width: 75vw;
             margin-top: 2rem;
-            margin-bottom: 10rem;
+            margin-bottom: 20rem;
         }
 
         @media (max-width: 1280px) {
@@ -174,9 +174,9 @@
 
         .model-card {
             display: flex;
-            width: 100%;
+            width: 60%;
             height: 0;
-            padding-bottom: 100%;
+            padding-bottom: 60%;
             flex-direction: column;
         }
 
@@ -192,16 +192,21 @@
             flex-direction: row;
             gap: 0.5rem;
             width: 100%;
-            height: 0;
         }
 
         .gallery-img {
             flex-grow: 1;
             border-radius: 5px;
-            height: 100px;
+            height: 5vw;
             object-fit: cover;
             cursor: pointer;
             transition: transform 0.2s ease-in-out;
+        }
+
+        @media (max-width: 1024px) {
+            .gallery-img {
+                height: 10vw;
+            }
         }
 
         .gallery-img:hover {
@@ -239,7 +244,7 @@
             row-gap: 0.5rem;
             justify-content: left;
             align-items: flex-start;
-            width: 45%;
+            width: 35%;
             height: 0;
         }
 
@@ -259,7 +264,6 @@
                 width: 100%;
                 padding: 1rem;
                 margin-top: 10rem;
-                margin-bottom: 5rem;
             }
         }
 
