--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <p>Explore curated models and smart-water solutions for your projects.</p>
             <a href="#" class="button">Search Now</a>
         </div>
-        <img src="https://pub-eb4d193b9a814125a65c71bdc18ad5d0.r2.dev/bimviewer.webp" alt="Featured Product" />
+        <img src="https://pub-eb4d193b9a814125a65c71bdc18ad5d0.r2.dev/bimviewer2.webp" alt="Featured Product" />
     </section>
 
     <section class="products-grid">
