--- a/structure-models.html
+++ b/structure-models.html
@@ -408,6 +408,7 @@
             text-decoration: none;
         } 
     </style>
+    <script type="module" crossorigin src="./assets/main-DkmaFD7s.js"></script>
 </head>
 <body>
     <header class="header">
