--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BimViewer</title>
     <script type="module" src="/main.js"></script>
+    <link rel="icon" href="https://pub-eb4d193b9a814125a65c71bdc18ad5d0.r2.dev/logo.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
